--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,32 @@
         "128": "images/icon.png"
     },
 
+    "action": {
+        "default_title": "Zoho CRM Enhancer",
+        "default_popup": "popup/popup.html"
+    },
+
+    "content_scripts": [
+        {
+            "js": [
+                "scripts/functions-editor/functions-editor.js"
+            ],
+            "css": [
+                "scripts/functions-editor/functions-editor.css",
+                "fonts/fonts.css"
+            ],
+            "matches": [
+                "https://crm.zoho.com/*",
+                "https://crm.zoho.au/*",
+                "https://crm.zoho.eu/*",
+                "https://crm.zoho.com.au/*",
+                "https://crm.zoho.com.cn/*",
+                "https://crm.zoho.jp/*",
+                "https://crm.zoho.in/*"
+            ]
+        }
+    ],
+
     "web_accessible_resources": [
         {
             "resources": [
@@ -96,27 +122,6 @@
                 "fonts/JetBrainsMono-ThinItalic.woff2"
             ],
             "matches": [ "<all_urls>" ]
-        }
-    ],
-
-    "content_scripts": [
-        {
-            "js": [
-                "scripts/functions-editor/functions-editor.js"
-            ],
-            "css": [
-                "scripts/functions-editor/functions-editor.css",
-                "fonts/fonts.css"
-            ],
-            "matches": [
-                "https://crm.zoho.com/*",
-                "https://crm.zoho.au/*",
-                "https://crm.zoho.eu/*",
-                "https://crm.zoho.com.au/*",
-                "https://crm.zoho.com.cn/*",
-                "https://crm.zoho.jp/*",
-                "https://crm.zoho.in/*"
-            ]
         }
     ]
 }
