--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,8 @@
     "web_accessible_resources": [
         {
             "resources": [
+                "scripts/functions-editor/code-formatter.js",
+                "scripts/functions-editor/close-button-action.js",
                 "fonts/JetBrainsMono-Bold.eot",
                 "fonts/JetBrainsMono-Bold.svg",
                 "fonts/JetBrainsMono-Bold.ttf",
