--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,8 @@ root = true
 quote_type = single
 indent_style = space
 indent_size = 2
+max_line_length = 80
+print_width = 1
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = false
