--- a/manifest.json
+++ b/manifest.json
@@ -1,129 +1,129 @@
 {
-    "manifest_version": 3,
-    "name": "Zoho CRM Enhancer",
-    "version": "1.0",
-    "description": "Useful UI and UX improvements for Zoho CRM.",
+  "manifest_version": 3,
+  "name": "Zoho CRM Enhancer",
+  "version": "1.0",
+  "description": "Useful UI and UX improvements for Zoho CRM.",
 
-    "icons": {
-        "16": "images/icon.png",
-        "32": "images/icon.png",
-        "48": "images/icon.png",
-        "128": "images/icon.png"
-    },
+  "icons": {
+    "16": "images/icon.png",
+    "32": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
+  },
 
-    "action": {
-        "default_title": "Zoho CRM Enhancer",
-        "default_popup": "popup/popup.html"
-    },
+  "permissions": [
+    "storage"
+  ],
+  
+  "action": {
+    "default_title": "Zoho CRM Enhancer",
+    "default_popup": "popup/popup.html"
+  },
 
-    "content_scripts": [
-        {
-            "js": [
-                "scripts/functions-editor/functions-editor.js"
-            ],
-            "css": [
-                "fonts/fonts.css"
-            ],
-            "matches": [
-                "https://crm.zoho.com/*",
-                "https://crm.zoho.au/*",
-                "https://crm.zoho.eu/*",
-                "https://crm.zoho.com.au/*",
-                "https://crm.zoho.com.cn/*",
-                "https://crm.zoho.jp/*",
-                "https://crm.zoho.in/*"
-            ]
-        }
-    ],
+  "content_scripts": [
+    {
+      "js": ["scripts/functions-editor/functions-editor.js"],
+      "css": ["fonts/fonts.css"],
+      "matches": [
+        "https://crm.zoho.com/*",
+        "https://crm.zoho.au/*",
+        "https://crm.zoho.eu/*",
+        "https://crm.zoho.com.au/*",
+        "https://crm.zoho.com.cn/*",
+        "https://crm.zoho.jp/*",
+        "https://crm.zoho.in/*"
+      ]
+    }
+  ],
 
-    "web_accessible_resources": [
-        {
-            "resources": [
-                "scripts/functions-editor/functions-editor.css",
-                "scripts/functions-editor/code-formatter.js",
-                "scripts/functions-editor/close-button-action.js",
-                "fonts/JetBrainsMono-Bold.eot",
-                "fonts/JetBrainsMono-Bold.svg",
-                "fonts/JetBrainsMono-Bold.ttf",
-                "fonts/JetBrainsMono-Bold.woff",
-                "fonts/JetBrainsMono-Bold.woff2",
-                "fonts/JetBrainsMono-BoldItalic.eot",
-                "fonts/JetBrainsMono-BoldItalic.svg",
-                "fonts/JetBrainsMono-BoldItalic.ttf",
-                "fonts/JetBrainsMono-BoldItalic.woff",
-                "fonts/JetBrainsMono-BoldItalic.woff2",
-                "fonts/JetBrainsMono-ExtraBold.eot",
-                "fonts/JetBrainsMono-ExtraBold.svg",
-                "fonts/JetBrainsMono-ExtraBold.ttf",
-                "fonts/JetBrainsMono-ExtraBold.woff",
-                "fonts/JetBrainsMono-ExtraBold.woff2",
-                "fonts/JetBrainsMono-ExtraBoldItalic.eot",
-                "fonts/JetBrainsMono-ExtraBoldItalic.svg",
-                "fonts/JetBrainsMono-ExtraBoldItalic.ttf",
-                "fonts/JetBrainsMono-ExtraBoldItalic.woff",
-                "fonts/JetBrainsMono-ExtraBoldItalic.woff2",
-                "fonts/JetBrainsMono-ExtraLight.eot",
-                "fonts/JetBrainsMono-ExtraLight.svg",
-                "fonts/JetBrainsMono-ExtraLight.ttf",
-                "fonts/JetBrainsMono-ExtraLight.woff",
-                "fonts/JetBrainsMono-ExtraLight.woff2",
-                "fonts/JetBrainsMono-ExtraLightItalic.eot",
-                "fonts/JetBrainsMono-ExtraLightItalic.svg",
-                "fonts/JetBrainsMono-ExtraLightItalic.ttf",
-                "fonts/JetBrainsMono-ExtraLightItalic.woff",
-                "fonts/JetBrainsMono-ExtraLightItalic.woff2",
-                "fonts/JetBrainsMono-Italic.eot",
-                "fonts/JetBrainsMono-Italic.svg",
-                "fonts/JetBrainsMono-Italic.ttf",
-                "fonts/JetBrainsMono-Italic.woff",
-                "fonts/JetBrainsMono-Italic.woff2",
-                "fonts/JetBrainsMono-Light.eot",
-                "fonts/JetBrainsMono-Light.svg",
-                "fonts/JetBrainsMono-Light.ttf",
-                "fonts/JetBrainsMono-Light.woff",
-                "fonts/JetBrainsMono-Light.woff2",
-                "fonts/JetBrainsMono-LightItalic.eot",
-                "fonts/JetBrainsMono-LightItalic.svg",
-                "fonts/JetBrainsMono-LightItalic.ttf",
-                "fonts/JetBrainsMono-LightItalic.woff",
-                "fonts/JetBrainsMono-LightItalic.woff2",
-                "fonts/JetBrainsMono-Medium.eot",
-                "fonts/JetBrainsMono-Medium.svg",
-                "fonts/JetBrainsMono-Medium.ttf",
-                "fonts/JetBrainsMono-Medium.woff",
-                "fonts/JetBrainsMono-Medium.woff2",
-                "fonts/JetBrainsMono-MediumItalic.eot",
-                "fonts/JetBrainsMono-MediumItalic.svg",
-                "fonts/JetBrainsMono-MediumItalic.ttf",
-                "fonts/JetBrainsMono-MediumItalic.woff",
-                "fonts/JetBrainsMono-MediumItalic.woff2",
-                "fonts/JetBrainsMono-Regular.eot",
-                "fonts/JetBrainsMono-Regular.svg",
-                "fonts/JetBrainsMono-Regular.ttf",
-                "fonts/JetBrainsMono-Regular.woff",
-                "fonts/JetBrainsMono-Regular.woff2",
-                "fonts/JetBrainsMono-SemiBold.eot",
-                "fonts/JetBrainsMono-SemiBold.svg",
-                "fonts/JetBrainsMono-SemiBold.ttf",
-                "fonts/JetBrainsMono-SemiBold.woff",
-                "fonts/JetBrainsMono-SemiBold.woff2",
-                "fonts/JetBrainsMono-SemiBoldItalic.eot",
-                "fonts/JetBrainsMono-SemiBoldItalic.svg",
-                "fonts/JetBrainsMono-SemiBoldItalic.ttf",
-                "fonts/JetBrainsMono-SemiBoldItalic.woff",
-                "fonts/JetBrainsMono-SemiBoldItalic.woff2",
-                "fonts/JetBrainsMono-Thin.eot",
-                "fonts/JetBrainsMono-Thin.svg",
-                "fonts/JetBrainsMono-Thin.ttf",
-                "fonts/JetBrainsMono-Thin.woff",
-                "fonts/JetBrainsMono-Thin.woff2",
-                "fonts/JetBrainsMono-ThinItalic.eot",
-                "fonts/JetBrainsMono-ThinItalic.svg",
-                "fonts/JetBrainsMono-ThinItalic.ttf",
-                "fonts/JetBrainsMono-ThinItalic.woff",
-                "fonts/JetBrainsMono-ThinItalic.woff2"
-            ],
-            "matches": [ "<all_urls>" ]
-        }
-    ]
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "scripts/functions-editor/functions-editor.css",
+        "scripts/functions-editor/code-formatter.js",
+        "scripts/functions-editor/close-button-action.js",
+        "fonts/JetBrainsMono-Bold.eot",
+        "fonts/JetBrainsMono-Bold.svg",
+        "fonts/JetBrainsMono-Bold.ttf",
+        "fonts/JetBrainsMono-Bold.woff",
+        "fonts/JetBrainsMono-Bold.woff2",
+        "fonts/JetBrainsMono-BoldItalic.eot",
+        "fonts/JetBrainsMono-BoldItalic.svg",
+        "fonts/JetBrainsMono-BoldItalic.ttf",
+        "fonts/JetBrainsMono-BoldItalic.woff",
+        "fonts/JetBrainsMono-BoldItalic.woff2",
+        "fonts/JetBrainsMono-ExtraBold.eot",
+        "fonts/JetBrainsMono-ExtraBold.svg",
+        "fonts/JetBrainsMono-ExtraBold.ttf",
+        "fonts/JetBrainsMono-ExtraBold.woff",
+        "fonts/JetBrainsMono-ExtraBold.woff2",
+        "fonts/JetBrainsMono-ExtraBoldItalic.eot",
+        "fonts/JetBrainsMono-ExtraBoldItalic.svg",
+        "fonts/JetBrainsMono-ExtraBoldItalic.ttf",
+        "fonts/JetBrainsMono-ExtraBoldItalic.woff",
+        "fonts/JetBrainsMono-ExtraBoldItalic.woff2",
+        "fonts/JetBrainsMono-ExtraLight.eot",
+        "fonts/JetBrainsMono-ExtraLight.svg",
+        "fonts/JetBrainsMono-ExtraLight.ttf",
+        "fonts/JetBrainsMono-ExtraLight.woff",
+        "fonts/JetBrainsMono-ExtraLight.woff2",
+        "fonts/JetBrainsMono-ExtraLightItalic.eot",
+        "fonts/JetBrainsMono-ExtraLightItalic.svg",
+        "fonts/JetBrainsMono-ExtraLightItalic.ttf",
+        "fonts/JetBrainsMono-ExtraLightItalic.woff",
+        "fonts/JetBrainsMono-ExtraLightItalic.woff2",
+        "fonts/JetBrainsMono-Italic.eot",
+        "fonts/JetBrainsMono-Italic.svg",
+        "fonts/JetBrainsMono-Italic.ttf",
+        "fonts/JetBrainsMono-Italic.woff",
+        "fonts/JetBrainsMono-Italic.woff2",
+        "fonts/JetBrainsMono-Light.eot",
+        "fonts/JetBrainsMono-Light.svg",
+        "fonts/JetBrainsMono-Light.ttf",
+        "fonts/JetBrainsMono-Light.woff",
+        "fonts/JetBrainsMono-Light.woff2",
+        "fonts/JetBrainsMono-LightItalic.eot",
+        "fonts/JetBrainsMono-LightItalic.svg",
+        "fonts/JetBrainsMono-LightItalic.ttf",
+        "fonts/JetBrainsMono-LightItalic.woff",
+        "fonts/JetBrainsMono-LightItalic.woff2",
+        "fonts/JetBrainsMono-Medium.eot",
+        "fonts/JetBrainsMono-Medium.svg",
+        "fonts/JetBrainsMono-Medium.ttf",
+        "fonts/JetBrainsMono-Medium.woff",
+        "fonts/JetBrainsMono-Medium.woff2",
+        "fonts/JetBrainsMono-MediumItalic.eot",
+        "fonts/JetBrainsMono-MediumItalic.svg",
+        "fonts/JetBrainsMono-MediumItalic.ttf",
+        "fonts/JetBrainsMono-MediumItalic.woff",
+        "fonts/JetBrainsMono-MediumItalic.woff2",
+        "fonts/JetBrainsMono-Regular.eot",
+        "fonts/JetBrainsMono-Regular.svg",
+        "fonts/JetBrainsMono-Regular.ttf",
+        "fonts/JetBrainsMono-Regular.woff",
+        "fonts/JetBrainsMono-Regular.woff2",
+        "fonts/JetBrainsMono-SemiBold.eot",
+        "fonts/JetBrainsMono-SemiBold.svg",
+        "fonts/JetBrainsMono-SemiBold.ttf",
+        "fonts/JetBrainsMono-SemiBold.woff",
+        "fonts/JetBrainsMono-SemiBold.woff2",
+        "fonts/JetBrainsMono-SemiBoldItalic.eot",
+        "fonts/JetBrainsMono-SemiBoldItalic.svg",
+        "fonts/JetBrainsMono-SemiBoldItalic.ttf",
+        "fonts/JetBrainsMono-SemiBoldItalic.woff",
+        "fonts/JetBrainsMono-SemiBoldItalic.woff2",
+        "fonts/JetBrainsMono-Thin.eot",
+        "fonts/JetBrainsMono-Thin.svg",
+        "fonts/JetBrainsMono-Thin.ttf",
+        "fonts/JetBrainsMono-Thin.woff",
+        "fonts/JetBrainsMono-Thin.woff2",
+        "fonts/JetBrainsMono-ThinItalic.eot",
+        "fonts/JetBrainsMono-ThinItalic.svg",
+        "fonts/JetBrainsMono-ThinItalic.ttf",
+        "fonts/JetBrainsMono-ThinItalic.woff",
+        "fonts/JetBrainsMono-ThinItalic.woff2"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
