--- a/manifest.json
+++ b/manifest.json
@@ -42,6 +42,7 @@
         "scripts/functions-editor/functions-editor.css",
         "scripts/functions-editor/code-formatter.js",
         "scripts/functions-editor/close-button-action.js",
+        "images/dummy-icon.png",
         "fonts/JetBrainsMono-Bold.eot",
         "fonts/JetBrainsMono-Bold.svg",
         "fonts/JetBrainsMono-Bold.ttf",
