--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,7 @@
 
   "content_scripts": [
     {
-      "js": ["scripts/utilities/utilities.js", "scripts/functions-editor/functions-editor.js"],
-      "css": ["scripts/utilities/variables.css"],
+      "js": ["scripts/base/utilities.js", "scripts/functions-editor/functions-editor.js"],
       "matches": [
         "https://crm.zoho.com/*",
         "https://crm.zoho.au/*",
@@ -37,13 +36,7 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "scripts/functions-editor/code-beautifier.js",
-        "scripts/functions-editor/close-button-action.js",
-        "scripts/functions-editor/functions-editor.css",
-        "scripts/functions-editor/settings-styles/*",
-        "scripts/popup/settings-styles/*",
-        "scripts/popup/popup.html",
-        "scripts/utilities/themes/*",
+        "scripts/*",
         "fonts/*"
       ],
       "matches": [
