Remove Not Used Permissions

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-  "permissions": ["storage", "activeTab"],
+  "permissions": ["storage"],
 
   "action": {
     "default_title": "Zoho CRM DevTool",
